// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add items 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "New Notebook",
      "price": 10.31,
    },
  ],
}
`;

exports[`can add items 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "The Notebook",
        "price": 10.31,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "New Notebook",
        "price": 10.31,
      },
    ],
  },
]
`;

exports[`can add items with patch 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/items/0",
    "value": Object {
      "image": "",
      "name": "The Notebook",
      "price": 10.31,
    },
  },
  Object {
    "op": "replace",
    "path": "/items/0/name",
    "value": "New Notebook",
  },
]
`;
